# WACC-Compiler

./: .Cargo.toml.swp  .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile  README.md  rust-toolchain.toml  test.wacc
docs/: report.tex
docs/diagram/: Compiler Map.drawio  dead code.drawio  tail call opt.drawio
examples/dead-code-removal/: deadCodeInlining.wacc  integerOverflow.wacc  interspersedDeadCode.wacc
examples/inlining/: basicInlining.wacc
examples/tail call optimisation/: ackermann.wacc  collatz.wacc  propagated tail call.wacc
examples/tail-call-optimisation/: infinite recursion.wacc
report/: report.pyg  report.tex
report/diagram/: Compiler Map.drawio
src/: ast.rs  emulator.rs  graph.rs  intermediate.rs  main.rs
src/backend/: assembly_gen.rs  const_branch.rs  const_prop.rs  data_flow.rs  dead_code.rs  graph_coloring.rs  inlining.rs  mod.rs  same_branch.rs  ssa.rs  ssa_opt.rs  tail_call_optimisation.rs  three_code.rs
src/backend/arm/: allocation_state.rs  mod.rs  (+8 more)
src/backup_backend/: arm_repr.rs  arm_repr_display.rs  helper_functions.rs  int_constraints.rs  mod.rs  old_mod  trans_expr.rs  trans_stats.rs
src/frontend/: ast.rs  error.rs  mod.rs  modules.rs  parser.rs  semantic.rs  tests.rs
src/tests/: mod.rs  test.wacc
stdlib/: array_utils.wacc  math.wacc
stdlib/old_array_utils_tests/: count_bool_arr.wacc  count_char_arr.wacc  count_int_arr.wacc  fill_bool_arr.wacc  fill_char_arr.wacc  fill_int_arr_small.wacc  find_nth_int_arr.wacc  print_bool_arr.wacc  print_char_arr.wacc  print_int_arr.wacc
stdlib/test_generator/: array_utils_test_gen.py
(+127 files in other folders)
