[package]
name = "wacc_33"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compile"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
nom-supreme = "0.6.0"
clap = "3.0.5"
lazy_static = "1.4.0"
colored = "2.0.0"
unicode-width = "0.1.9"
indoc = "1.0.3"
