[package]
name = "wacc_33"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compile"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
nom-supreme = "0.6.0"
clap = { version = "3.0.14", features = ["derive"] }
lazy_static = "1.4.0"
colored = "2.0.0"
unicode-width = "0.1.9"
indoc = "1.0.3"
linked_hash_set = "0.1.4"
path-absolutize = "3.0.11"
pathdiff = "0.2.1"
rstest = "0.12"